<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies" />
    <item
        android:id="@+id/menu_tvshow"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv_show" />
    <item
        android:id="@+id/menu_bookmark"
        android:icon="@drawable/ic_bookmark_white"
        android:title="@string/bookmarks" />
</menu>